call-center/src/objects/Transaction__c.object
<CustomObject>
    <description>Financial transaction details</description>
    <fields>
        <fullName>Adjustment2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment</label>
        <referenceTo>Adjustment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of case or payment</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_To_Aggregate__c</fullName>
        <formula>IF(ISBLANK(Payment__c),
  Amount__c,
  IF(ISBLANK(Payment__r.Sirono_ID__c), Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount to Aggregate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Group__c</fullName>
        <description>Charge Group</description>
        <label>Charge Group</label>
        <referenceTo>Charge_Group__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge_Added_Since_Plan_Start__c</fullName>
        <formula>AND( Transaction_Date__c &gt; DATEVALUE(Charge_Group__r.Payment_Plan__r.Plan_Value_Modified_Date__c), Amount__c &gt; 0 , Txn_Method__c == &apos;Service&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge added since payment plan start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Balance (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Date__c</fullName>
        <label>Export Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External Id for the transaction&apos;s entity, not for the transaction itself</description>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Date__c</fullName>
        <description>Fail Date</description>
        <label>Fail Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method (Deprecated)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes (Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment</description>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Tranaction_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>Date and Time stamp</description>
        <label>Post Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service2__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sirono_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Txn_Method__c</fullName>
        <description>Determine the transaction method based on the linked objects</description>
        <formula>IF(Service2__c != NULL, &apos;Service&apos;, IF(Adjustment2__c != NULL, &apos;Adjustment&apos;, IF(Payment__c != NULL, &apos;Payment&apos;, &apos;Unknown&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment__c</columns>
        <columns>Charge_Group__c</columns>
        <columns>Amount__c</columns>
        <columns>Txn_Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>